[package]
name = "r_b"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.7", features = ["v4"] }
rb_lib_hub = { path = "rb_lib_hub" }
clap = { version = "4.5.6", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.54.1", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic"] }
futures = { version = "0.3.30" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
